testdata/baselines/reference/submodule/conformance/jsDeclarationsCommonjsRelativePath.errors.txt
reexport.js(2,15): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== reexport.js (1 errors) ====
    'use strict';
    const Thing = require('./thing').Thing
                  ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    module.exports = { Thing }
    
==== thing.js (0 errors) ====
    'use strict';
    class Thing {}
    module.exports = { Thing }
    